objects/ASI_CRM_OutletDepletion__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet (Additional)</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Outlet Depletion</relationshipLabel>
        <relationshipName>Outlet_Depletion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Head__c</fullName>
        <label>Bottle Head</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Box_Lid__c</fullName>
        <label>Box Lid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Company__c</fullName>
        <formula>TEXT( ASI_CRM_SubBrand__r.ASI_CRM_TW_Company__c )</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Depletion__c</fullName>
        <label>Depletion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExId__c</fullName>
        <externalId>true</externalId>
        <label>Outlet Depletion ExId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>TEXT(MONTH( ASI_CRM_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outlet Depletion</relationshipLabel>
        <relationshipName>Outlet_Depletion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Category__c</fullName>
        <formula>ASI_CRM_SubBrand__r.ASI_HK_CRM_Product_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Outlet Depletion</relationshipLabel>
        <relationshipName>Outlet_Depletion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_category__c</fullName>
        <formula>ASI_CRM_SubBrand__r.ASI_TH_CRM_Sub_category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR( ASI_CRM_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Outlet Depletion</label>
    <listViews>
        <fullName>ASI_CRM_TW_Outlet_Depletion</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_SubBrand__c</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_Depletion__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>TW CRM Outlet Depletion</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Outlet Depletion No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Depletion</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_OutletDepletion_RcrdTyp</fullName>
        <active>true</active>
        <label>TW Outlet Depletion</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>